  * hal_input: fix 'ZeroDivisionError' for absolute axes that report the same
    value for min and max
  * fix various inaccuracies in the documentation
  * halscope: fix the time displayed when mousing over a trace
  * axis: fix ctrl and - or = starting an unstoppable jog
  * axis: fix the numeric keypad with numlock on
  * task: fix the initial coordinate system offset (SF#1895693)

 -- Jeff Epler <jepler@unpy.net>  Sun, 17 Feb 2008 17:58:35 -0600

emc2 (1:2.2.3) unstable; urgency=low

  * gcode quick reference had G98, G99 transposed
  * gcode quick reference had wrong links to G18, G19 documentation
  * initialize all axes, including unused ones, to 0.00000.  this fixes
    several problems:
    * g38.2 probe logs 0.000000 for axes that do not exist
    * several types of 'following error' messages.  In particular, 4-axis code
      seemed to be affected by this.
  * axis: make 'touch off' work when the loaded file uses percent signs
  * stepconf: fix several problems with Test Axis button
  * hal_input: make sure absolute axes are driven with the correct value at
    startup
  * axis: show emc2 version number in title bar
  * axis: show lathe tools with very small diameters better
  * test suite: update expected results for several gcode tests
  * fix sample configuration 'lathe-pluto'
  * axis: fix incorrect line in the preview where tool length offset is changed
  * fixed ferror problem when using start-from-line
  * fix #1853953 M66 doesn't work with parport inputs
  * temp fix preventing segfaults on bad M66 indexes
  * pluto-step: fix a problem when the motor position went beyond +-2^20 counts
  * fix NAN that appears when you move below the lower extent of a screw comp
    file
  * pluto-servo: fix a problem with pwm+direction mode
  * updates to romanian translation

 -- Jeff Epler <jepler@unpythonic.net>  Sun, 27 Jan 2008 20:26:21 -0600

emc2 (1:2.2.2) unstable; urgency=low

  * move hal_unlink manpage to development package